Bug fixes on basic readability
It’s hilarious to find bugs on something I mostly intend to throw away,
but still see value in fixing them. The client is using this page to
proof the copy, though, so a little more consistency is nice.

--- a/assets/css/4-layouts/home.sass
+++ b/assets/css/4-layouts/home.sass
@@ -79,6 +79,10 @@ section.super
   ul
     margin: 0
 
+    li
+      &:last-child
+        margin-bottom: 24px
+
   table
     margin: 24px auto
 
